--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h2 {
 #query {
   text-align: center;
   border-radius: 3px;
-  color: #407088;
+  color: #a0a0a0;
   padding: 17px 31px;
   display: inline;
 }
@@ -146,7 +146,7 @@ button :hover {
 #currentTemperature {
   text-align: center;
   font-size: 31px;
-  color: #74ebd5;
+  color: #407088;
 }
 #celsius-link,
 #fahrenheit-link {
