--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ h2 {
   text-align: center;
 }
 
+#this {
+    background: #132743;
+}
+
 h6 {
   text-align: center;
 }
@@ -148,6 +152,7 @@ button :hover {
   font-size: 31px;
   color: #407088;
 }
+
 #celsius-link,
 #fahrenheit-link {
   text-align: center;
