--- a/style.css
+++ b/style.css
@@ -47,6 +47,13 @@ h2 {
   text-align: center;
 }
 
+#weatherInfo {
+  color: #132743;
+  font-size: 18px;
+  text-align: center;
+  display: block;
+}
+
 h6 {
   text-align: center;
 }
