--- a/style.css
+++ b/style.css
@@ -13,12 +13,15 @@ h1 {
   text-align: center;
   color: #9face6;
   font-size: 31px;
+  display: block;
+  padding-left: 420px;
 }
 
 h2 {
   text-align: center;
   color: #9face6;
   font-size: 24px;
+  display: block;
 }
 
 #query {
