--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 h5 {
   text-align: center;
-  color: #ffb5b5;
+  color: #f5e1da;
   font-size: 20px;
 }
 
@@ -18,7 +18,7 @@ h1 {
 
 h2 {
   text-align: center;
-  color: #9face6;
+  color: #ffb5b5;
   font-size: 24px;
   display: block;
 }
