--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ h2 {
 #query {
   text-align: center;
   border-radius: 3px;
-  color: #a0a0a0;
-  padding: 17px 31px;
+  color: #a0a0a0
   display: block;
 }
 
