--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ h2 {
 #query {
   text-align: center;
   border-radius: 3px;
-  color: #a0a0a0
-  display: block;
+  color: #a0a0a0;
+  display: inline;
 }
 
 .weatherExtra {
