--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to right, #74ebd5 0%, #9face6 100%);
+  background: linear-gradient(to right, hsl(169, 75%, 69%) 0%, #9face6 100%);
   font-family: "Otomanopee One", sans-serif;
 }
 
@@ -14,6 +14,7 @@ h1 {
   color: #f5e1da;
   font-size: 31px;
   display: block;
+  margin-top: 18px;
 }
 
 h2 {
@@ -21,6 +22,7 @@ h2 {
   color: #132743;
   font-size: 24px;
   display: block;
+  margin-bottom: 11px;
 }
 
 #query {
@@ -138,8 +140,8 @@ footer {
   text-align: center;
   color: black;
 }
-.weather-temperature img {
-  display block;
+.icon {
+  display: block;
   height: 31px;
   width: 31px;
 }
